--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,54 @@
-### Go template
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+# Compiled class file
+*.class
 
-# Test binary, built with `go test -c`
-*.test
+# Log file
+*.log
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# BlueJ files
+*.ctxt
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+target/
 
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
 .idea
-*.xml
+*.iws
+*.iml
+*.ipr
 
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+out/
+
+.gradle/
+
+jars/
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 .DS_Store/
