--- a/berry-common/pom.xml
+++ b/berry-common/pom.xml
@@ -31,6 +31,12 @@
             <version>3.5.3.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.7.8</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
