--- a/berry-common/pom.xml
+++ b/berry-common/pom.xml
@@ -32,10 +32,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo</artifactId>
-            <version>2.7.8</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.3.12.RELEASE</version>
         </dependency>
     </dependencies>
 
