--- a/berry-services/berry-user-service/berry-user-interface/pom.xml
+++ b/berry-services/berry-user-service/berry-user-interface/pom.xml
@@ -11,11 +11,15 @@
     </parent>
 
     <artifactId>berry-user-interface</artifactId>
-
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>cn.akfang.berry</groupId>
+            <artifactId>berry-common</artifactId>
+        </dependency>
+    </dependencies>
 </project>
