--- a/berry-services/berry-user-service/berry-user-consumer/pom.xml
+++ b/berry-services/berry-user-service/berry-user-consumer/pom.xml
@@ -42,6 +42,12 @@
         <version>1.0</version>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+        <groupId>cn.akfang.berry</groupId>
+        <artifactId>berry-misc-interface</artifactId>
+        <version>1.0</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
 
     <build>
