--- a/berry-services/berry-misc-service/berry-misc-provider/pom.xml
+++ b/berry-services/berry-misc-service/berry-misc-provider/pom.xml
@@ -4,19 +4,23 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.akfang.berry</groupId>
-        <artifactId>berry-video-service</artifactId>
+        <artifactId>berry-misc-service</artifactId>
         <version>1.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>berry-video-provider</artifactId>
+    <artifactId>berry-misc-provider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>berry-video-provider</name>
-    <description>berry-video-provider</description>
+    <name>berry-misc-provider</name>
+    <description>berry-misc-provider</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -49,7 +53,7 @@
         </dependency>
         <dependency>
             <groupId>cn.akfang.berry</groupId>
-            <artifactId>berry-video-interface</artifactId>
+            <artifactId>berry-misc-interface</artifactId>
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
