--- a/berry-services/berry-video-service/berry-video-consumer/pom.xml
+++ b/berry-services/berry-video-service/berry-video-consumer/pom.xml
@@ -11,8 +11,8 @@
 
     <artifactId>berry-video-consumer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>berry-video-provider</name>
-    <description>berry-video-provider</description>
+    <name>berry-video-consumer</name>
+    <description>berry-video-consumer</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -40,6 +40,12 @@
         <dependency>
             <groupId>cn.akfang.berry</groupId>
             <artifactId>berry-video-interface</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.akfang.berry</groupId>
+            <artifactId>berry-misc-interface</artifactId>
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
