--- a/berry-frontend/package.json
+++ b/berry-frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^10.5.0",
     "core-js": "^3.8.3",
     "dplayer": "^1.27.1",
     "element-plus": "^2.4.1",
