--- a/berry-frontend/package.json
+++ b/berry-frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.5.0",
+    "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "dplayer": "^1.27.1",
     "element-plus": "^2.4.1",
