feat: add WxJava lib, QRCode scan logic

--- a/berry-gateway/src/main/resources/application.yml
+++ b/berry-gateway/src/main/resources/application.yml
@@ -24,3 +24,10 @@ spring:
             - Path=/video/**
           filters:
             - RewritePath=/video/(?<segment>.*), //$\{segment}
+
+        - id: misc-service
+          uri: lb://berry-misc-consumer
+          predicates:
+            - Path=/misc/**
+          filters:
+            - RewritePath=/misc/(?<segment>.*), //$\{segment}
