--- a/berry-frontend/package.json
+++ b/berry-frontend/package.json
@@ -14,6 +14,7 @@
     "dplayer": "^1.27.1",
     "element-plus": "^2.4.1",
     "hls.js": "^1.4.12",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
