chore: nacos dependencies & config

--- a/berry-gateway/pom.xml
+++ b/berry-gateway/pom.xml
@@ -20,6 +20,10 @@
         <!--nacos服务注册发现依赖-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
         <!--网关gateway依赖-->
