--- a/berry-services/berry-user-service/berry-user-consumer/pom.xml
+++ b/berry-services/berry-user-service/berry-user-consumer/pom.xml
@@ -29,11 +29,11 @@
     </dependency>
 
     <dependency>
-        <groupId>org.springframework.cloud</groupId>
+        <groupId>com.alibaba.cloud</groupId>
         <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
     </dependency>
     <dependency>
-        <groupId>org.springframework.cloud</groupId>
+        <groupId>com.alibaba.cloud</groupId>
         <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
     </dependency>
     <dependency>
