--- a/berry-services/berry-video-service/berry-video-provider/src/main/resources/bootstrap.yaml
+++ b/berry-services/berry-video-service/berry-video-provider/src/main/resources/bootstrap.yaml
@@ -12,6 +12,8 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+        ephemeral: false
+
       config:
         server-addr: 127.0.0.1:8848
   main:
