--- a/berry-frontend/package.json
+++ b/berry-frontend/package.json
@@ -15,6 +15,8 @@
     "element-plus": "^2.4.1",
     "hls.js": "^1.4.12",
     "pinia": "^2.1.7",
+    "qiniu-js": "^3.4.1",
+    "uuid": "^9.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
