--- a/berry-gateway/pom.xml
+++ b/berry-gateway/pom.xml
@@ -43,7 +43,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>app</finalName>
+        <finalName>berry-gateway</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
