--- a/berry-services/berry-user-service/pom.xml
+++ b/berry-services/berry-user-service/pom.xml
@@ -78,6 +78,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>berry-user</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
