--- a/berry-services/berry-video-service/pom.xml
+++ b/berry-services/berry-video-service/pom.xml
@@ -19,6 +19,10 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
@@ -65,6 +69,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>berry-video</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
