--- a/berry-services/berry-misc-service/pom.xml
+++ b/berry-services/berry-misc-service/pom.xml
@@ -75,6 +75,11 @@
         </dependency>
         <dependency>
             <groupId>cn.akfang.berry</groupId>
+            <artifactId>berry-message</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.akfang.berry</groupId>
             <artifactId>berry-common</artifactId>
             <version>1.0</version>
             <scope>compile</scope>
