--- a/berry-services/berry-video-service/pom.xml
+++ b/berry-services/berry-video-service/pom.xml
@@ -19,6 +19,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>cn.akfang.berry</groupId>
+            <artifactId>berry-message</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
