--- a/berry-frontend/package.json
+++ b/berry-frontend/package.json
@@ -18,6 +18,7 @@
     "qiniu-js": "^3.4.1",
     "uuid": "^9.0.1",
     "vue": "^3.2.13",
+    "vue-cropper": "^1.1.1",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
   },
