--- a/berry-frontend/package.json
+++ b/berry-frontend/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.2.13",
     "vue-cropper": "^1.1.1",
     "vue-router": "^4.2.5",
+    "vue3-virtual-scroller": "^0.2.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
