feat：搜索服务，整合ElasticSearch，视频搜索API

--- a/berry-gateway/src/main/resources/application.yaml
+++ b/berry-gateway/src/main/resources/application.yaml
@@ -41,3 +41,11 @@ spring:
             - Path=/misc/**
           filters:
             - RewritePath=/misc/(?<segment>.*), //$\{segment}
+
+
+        - id: search-service
+          uri: lb://berry-search-service
+          predicates:
+            - Path=/search/**
+          filters:
+            - RewritePath=/search/(?<segment>.*), //$\{segment}
