--- a/berry-services/berry-search-service/src/main/resources/application-dev.yaml
+++ b/berry-services/berry-search-service/src/main/resources/application-dev.yaml
@@ -36,7 +36,14 @@ spring:
     cache-names: menus_cache
     type: redis
 
+
 easy-es:
   address: 127.0.0.1:9200 # es连接地址+端口 格式必须为ip:port,如果是集群则可用逗号隔开
   username: elastic #如果无账号密码则可不配置此行
   password: changeme #如果无账号密码则可不配置此行
+  socketTimeout: 600000 # 请求通信超时时间 单位:ms 默认值600000ms 在平滑模式下,由于要迁移数据,用户可根据数据量大小调整此参数值大小,否则请求容易超时导致索引托管失败,建议您尽量给大不给小,跟那玩意一样,大点没事,太小你懂的!
+  global-config:
+    process_index_mode: manual #smoothly:平滑模式, not_smoothly:非平滑模式, manual:手动模式
+    async-process-index-blocking: true # 异步处理索引是否阻塞主线程 默认阻塞
+    distributed: false # 项目是否分布式环境部署,默认为true, 如果是单机运行可填false,将不加分布式锁,效率更高.
+    reindexTimeOutHours: 72 # 重建索引超时时间 单位小时,默认72H 根据迁移索引数据量大小灵活指定
