--- a/berry-services/berry-video-service/src/main/resources/application.yaml
+++ b/berry-services/berry-video-service/src/main/resources/application.yaml
@@ -30,3 +30,4 @@ mybatis-plus:
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
   configuration:
     map-underscore-to-camel-case: false
+    log-impl: org.apache.ibatis.logging.nologging.NoLoggingImpl
