refactor：拆分点赞,收藏评论 定时任务到action服务

--- a/berry-gateway/src/main/resources/application.yaml
+++ b/berry-gateway/src/main/resources/application.yaml
@@ -42,6 +42,13 @@ spring:
           filters:
             - RewritePath=/misc/(?<segment>.*), //$\{segment}
 
+        - id: action-service
+          uri: lb://berry-action-service
+          predicates:
+            - Path=/action/**
+          filters:
+            - RewritePath=/action/(?<segment>.*), //$\{segment}
+
 
         - id: search-service
           uri: lb://berry-search-service
