--- a/berry-services/berry-video-service/pom.xml
+++ b/berry-services/berry-video-service/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>berry-message</artifactId>
             <version>1.0</version>
         </dependency>
+        <!-- Websocket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
