--- a/berry-frontend/package.json
+++ b/berry-frontend/package.json
@@ -14,11 +14,13 @@
     "dplayer": "^1.27.1",
     "element-plus": "^2.4.1",
     "hls.js": "^1.4.12",
+    "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "qiniu-js": "^3.4.1",
     "uuid": "^9.0.1",
     "vue": "^3.2.13",
     "vue-cropper": "^1.1.1",
+    "vue-emoji-mart": "^1.0.5",
     "vue-router": "^4.2.5",
     "vue3-virtual-scroller": "^0.2.3",
     "vuex": "^4.0.2"
