--- a/berry-frontend/package.json
+++ b/berry-frontend/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.4.1",
     "hls.js": "^1.4.12",
     "mitt": "^3.0.1",
+    "moment": "^2.29.4",
     "pinia": "^2.1.7",
     "qiniu-js": "^3.4.1",
     "uuid": "^9.0.1",
