feat: 配置修改,项目完善

--- a/berry-services/berry-action-service/src/main/resources/application.yaml
+++ b/berry-services/berry-action-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: berry-action-service
   profiles:
-    active: prod
+    active: dev
   cloud:
     nacos:
       config:
