--- a/berry-services/berry-video-service/src/main/resources/application.yaml
+++ b/berry-services/berry-video-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: berry-video-service
   profiles:
-    active: prod
+    active: dev
   cloud:
     nacos:
       config:
