--- a/berry-services/berry-action-service/src/main/resources/application-dev.yaml
+++ b/berry-services/berry-action-service/src/main/resources/application-dev.yaml
@@ -1,6 +1,60 @@
 # DataSource Config
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/berryvideo-dev
+  datasource: # TODO: [数据库]此处需要更新
+    url: jdbc:mysql://localhost:3306/berryvideo
     username: root
     password:
+
+  redis:
+    ## Redis数据库索引（默认为0）
+    database: 0
+    ## Redis服务器连接端口
+    port: 6379
+    ## Redis服务器地址
+    host: 127.0.0.1
+    ## Redis服务器连接密码（默认为空）
+    password:
+    jedis:
+      pool:
+        ## 连接池最大连接数（使用负值表示没有限制）
+        #spring.redis.pool.max-active=8
+        max-active: 8
+        ## 连接池最大阻塞等待时间（使用负值表示没有限制）
+        #spring.redis.pool.max-wait=-1
+        max-wait: -1
+        ## 连接池中的最大空闲连接
+        #spring.redis.pool.max-idle=8
+        max-idle: 8
+        ## 连接池中的最小空闲连接
+        #spring.redis.pool.min-idle=0
+        min-idle: 0
+    ## 连接超时时间（毫秒）
+    timeout: 1200
+  cache:
+    redis:
+      time-to-live: 1800s
+    cache-names: menus_cache
+    type: redis
+
+  rabbitmq:
+    addresses: 127.0.0.1:5672
+    username: guest
+    password: guest
+    publisher-returns: true
+    publisher-confirm-type: correlated
+    virtual-host: /
+    listener:
+      type: simple
+      simple:
+        acknowledge-mode: auto #确认模式
+        prefetch: 1 #限制每次发送一条数据。
+        concurrency: 3 #同一个队列启动几个消费者
+        max-concurrency: 3 #启动消费者最大数量
+        #重试策略相关配置
+        retry:
+          # 开启消费者(程序出现异常)重试机制，默认开启并一直重试
+          enabled: true
+          # 最大重试次数
+          max-attempts: 5
+          # 重试间隔时间(毫秒)
+          initial-interval: 3000
