--- a/berry-services/berry-misc-service/src/main/resources/application-dev.yaml
+++ b/berry-services/berry-misc-service/src/main/resources/application-dev.yaml
@@ -1,10 +1,10 @@
 # DataSource Config
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:28446/berryvideo-dev
-    username:
+  datasource: # TODO: [数据库] 需要更新信息
+    url: jdbc:mysql://localhost:3306/berryvideo
+    username: root
     password:
-  redis:
+  redis: # TODO: [Redis] 需要更新信息
     ## Redis数据库索引（默认为0）
     database: 0
     ## Redis服务器连接端口
@@ -60,10 +60,10 @@ spring:
 
 qiniu:
   oss:
-    accessKey:
-    secretKey:
-    bucket:
-    pipeline:
+    accessKey: #TODO: [新项目启动] 填写你的 accessKey
+    secretKey: #TODO: [新项目启动] 填写你的 secretKey
+    bucket:  # TODO: [新项目启动] 填写你的 secretKey
+    pipeline:  # TODO: [新项目启动] 添加转码队列
     saveAs: avthumb/mp4|saveas/%s
     toM3U8: avthumb/m3u8/noDomain/1/segtime/15/vb/1m|saveas/%s
     toCover: vframe/jpg/offset/1|saveas/%s
@@ -71,10 +71,10 @@ qiniu:
 
 wx:
   mp:
-    token:
-    aesKey:
-    appId:
-    secret:
+    token: token123 # TODO: [新项目启动]这里和微信公众平台配置成一样的就行
+    aesKey:  # TODO: [新项目启动]微信公众平台测试号 aesKey
+    appId: # TODO: [新项目启动]微信公众平台测试号 appId
+    secret: # TODO: [新项目启动]微信公众平台测试号 secret
     config-storage:
       http-client-type: HttpClient
       key-prefix: wx
@@ -84,5 +84,5 @@ wx:
       type: Memory
 
   open:
-    appId:
-    appSecret:
+    appId: ${wx.mp.appId}
+    appSecret: ${wx.mp.secret}
