--- a/berry-services/berry-search-service/src/main/resources/application-dev.yaml
+++ b/berry-services/berry-search-service/src/main/resources/application-dev.yaml
@@ -1,11 +1,11 @@
 # DataSource Config
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/berryvideo-dev
+  datasource: # TODO: [数据库] 需要更新信息
+    url: jdbc:mysql://localhost:3306/berryvideo
     username: root
     password:
 
-  redis:
+  redis: # TODO: [Redis] 需要更新信息
     ## Redis数据库索引（默认为0）
     database: 0
     ## Redis服务器连接端口
@@ -36,9 +36,8 @@ spring:
     cache-names: menus_cache
     type: redis
 
-
-easy-es:
-  address: 127.0.0.1:9200 # es连接地址+端口 格式必须为ip:port,如果是集群则可用逗号隔开
+easy-es: # TODO: [ElasticSearch] 需要更新信息
+  address: localhost:9200 # es连接地址+端口 格式必须为ip:port,如果是集群则可用逗号隔开
   username: elastic #如果无账号密码则可不配置此行
   password: changeme #如果无账号密码则可不配置此行
   socketTimeout: 600000 # 请求通信超时时间 单位:ms 默认值600000ms 在平滑模式下,由于要迁移数据,用户可根据数据量大小调整此参数值大小,否则请求容易超时导致索引托管失败,建议您尽量给大不给小,跟那玩意一样,大点没事,太小你懂的!
